Closed
Bug 400459
Opened 18 years ago
Closed 18 years ago
[FIX]###!!! ASSERTION: Native anonymous node with wrong binding parent: '!aContent->IsNativeAnonymous()', file c:/trunk/mozilla/content/base/src/nsContentUtils.cpp, line 3702
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta1
People
(Reporter: WeirdAl, Assigned: bzbarsky)
References
()
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
8.29 KB,
text/plain
|
Details | |
|
1.19 KB,
patch
|
jst
:
review+
jst
:
superreview+
vlad
:
approvalM9+
vlad
:
approval1.9+
|
Details | Diff | Splinter Review |
Steps to reproduce:
(1) Load the URL into Minefield.
| Reporter | ||
Comment 1•18 years ago
|
||
bz, this looks like one you added, but you've also recently modified it. Any hints?
| Assignee | ||
Comment 2•18 years ago
|
||
Uh, right. <svg:use> just does this weird thing where it's the only thing that's got native anonymous kids that are not their own binding parents.
I guess we should special-case this in the assert... And of course this code won't treat svg:use anonymous content as native anonymous. Which is why I think it's setting the stuff that way...
| Assignee | ||
Updated•18 years ago
|
| Assignee | ||
Comment 3•18 years ago
|
||
SVG just has to be different...
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #285544 -
Flags: superreview?(jst)
Attachment #285544 -
Flags: review?(jst)
| Assignee | ||
Updated•18 years ago
|
Summary: ###!!! ASSERTION: Native anonymous node with wrong binding parent: '!aContent->IsNativeAnonymous()', file c:/trunk/mozilla/content/base/src/nsContentUtils.cpp, line 3702 → [FIX]###!!! ASSERTION: Native anonymous node with wrong binding parent: '!aContent->IsNativeAnonymous()', file c:/trunk/mozilla/content/base/src/nsContentUtils.cpp, line 3702
Updated•18 years ago
|
Attachment #285544 -
Flags: superreview?(jst)
Attachment #285544 -
Flags: superreview+
Attachment #285544 -
Flags: review?(jst)
Attachment #285544 -
Flags: review+
| Assignee | ||
Comment 4•18 years ago
|
||
Comment on attachment 285544 [details] [diff] [review]
Fix
This makes dealing with SVG in a debug build pretty painful... Debug-only change, so should be completely safe for the beta.
Attachment #285544 -
Flags: approval1.9?
Attachment #285544 -
Flags: approvalM9+
Attachment #285544 -
Flags: approval1.9?
Attachment #285544 -
Flags: approval1.9+
| Assignee | ||
Comment 5•18 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M9
You need to log in
before you can comment on or make changes to this bug.
Description
•