Fix assert to not fire on <svg:use>.  Bug 400459, r+sr=jst, a=vlad